# SpaceEmulator

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  build.sh  requirements.txt
include/: physics.hpp  physics_engine.hpp
scripts/: clean_build.bat  clean_build.sh  plot_gravity.py
src/: engine.cpp  gravity.cpp  main.cpp
tests/: test_gravity.cpp
